--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,10 +6,13 @@ on:
     tags:
       - v*
 
+permissions:
+  contents: write
+
 # workflow tasks
 jobs:
-  generate:
-    name: Generate cross-platform builds
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Git LFS
@@ -17,37 +20,29 @@ jobs:
         with:
           lfs: 'true'
 
-      - name: Checkout
-        uses: actions/checkout@v2
-
       - run: git lfs pull
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      - name: Fetch all tags
+        run: git fetch --force --tags
 
-      - name: Generate build files
-        uses: thatisuday/go-cross-build@v1.0.2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/go/bin
+            ~/.cache
+          key: livekit-cli
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.18
+
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
         env:
-          CGO_ENABLED: "0"
-        with:
-          platforms: 'linux/amd64, linux/arm64, darwin/amd64, windows/amd64' # linux/386, linux/arm are not supported
-          package: 'cmd/livekit-cli'
-          dest: 'dist'
-          name: 'livekit-cli'
-
-      - name: Generate build files
-        uses: thatisuday/go-cross-build@v1.0.2
-        env:
-          CGO_ENABLED: "0"
-        with:
-          platforms: 'linux/amd64, linux/arm64, darwin/amd64, windows/amd64' # linux/386, linux/arm are not supported
-          package: 'cmd/livekit-load-tester'
-          dest: 'dist'
-          name: 'livekit-load-tester'
-
-      - name: Release
-        uses: softprops/action-gh-release@v0.1.8
-        with:
-          files: dist/*
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
