--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Download Go modules
         run: go mod download
 
+      - uses: WillAbides/setup-go-faster@v1.7.0
+        with:
+          go-version: 1.18
       - name: Static Check
         uses: dominikh/staticcheck-action@v1.2.0
         with:
