--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,5 +44,5 @@ jobs:
       - name: Static Check
         uses: dominikh/staticcheck-action@v1.3.0
         with:
-          version: "v0.3.3"
+          version: "2023.1.3"
           install-go: false
