--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.18
+          go-version: "1.20"
 
       - name: Download Go modules
         run: go mod download
@@ -44,5 +44,5 @@ jobs:
       - name: Static Check
         uses: dominikh/staticcheck-action@v1.3.0
         with:
-          version: "v0.3.3"
+          version: "2023.1.3"
           install-go: false
