goreleaser: improve binary artifact size
Signed-off-by: Rui Chen <rui@chenrui.dev>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,6 +30,8 @@ builds:
     goos:
       - linux
       - windows
+    ldflags:
+      - -s -w
 archives:
   - format_overrides:
       - goos: windows
