--- a/.github/workflows/install-test.yaml
+++ b/.github/workflows/install-test.yaml
@@ -33,4 +33,4 @@ jobs:
         run: bash install-cli.sh
 
       - name: Checking installation
-        run: '(test -f /usr/local/bin/lk && echo Install success) || exit 1'
+        run: '(test -f /usr/local/bin/lk && test -f /usr/local/livekit-cli && echo Install success) || exit 1'
