--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -42,7 +42,7 @@ archives:
 release:
   github:
     owner: livekit
-    name: livekit-cli
+    name: lk
   draft: true
   prerelease: auto
 changelog:
