feat(cli): restructure subcommands (#343)
* refactor(cli): rename binary `livekit-cli` -> `lk`

* feat(cmd): update token subcommand

* feat(cmd): upgrade to urfave/cli/v3 and restructure more subcommands

* feat(cmd): add dummy command and update ci to build it too

* fix(install): wait until merge to update linux script

* chore(cmd): dummy binary prints to stderr and returns a nonzero code

This way it will interrupt any scripts depending on the old name.

* refactor(cmd): use persistent flags instead of withDefaultFlags

* fix(cmd): logging

* fix(cmd): handle cancellations properly

* chore(docs): update commands in README

* feat(cmd): update room commands

* feat(cmd): update egress commands

* feat(cmd): update ingress commands

* chore(cmd): final cleanup of commands

* chore(cmd): tidy lints

* chore(build): update build scripts and dockerfile to do symlink

* fix(cmd): include missing egress subcommands

* chore(build): update goreleaser bin name

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,11 +16,11 @@ before:
   hooks:
     - go mod tidy
 builds:
-  - id: livekit-cli
+  - id: lk
     env:
       - CGO_ENABLED=0
-    main: ./cmd/livekit-cli
-    binary: livekit-cli
+    main: ./cmd/lk
+    binary: lk
     goarm:
       - "7"
     goarch:
@@ -42,7 +42,7 @@ archives:
 release:
   github:
     owner: livekit
-    name: livekit-cli
+    name: lk
   draft: true
   prerelease: auto
 changelog:
