--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,5 +44,5 @@ jobs:
       - name: Static Check
         uses: dominikh/staticcheck-action@v1.3.1
         with:
-          version: "latest"
+          version: "2025.1.1"
           install-go: false
