fix: package version parsing when loading from git
also fixed other tests, added unit tests as part of CI

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,3 +46,6 @@ jobs:
         with:
           version: "latest"
           install-go: false
+
+      - name: Run Go tests
+        run: go test -v ./...
