--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,9 @@ jobs:
           go-version: "1.25"
           cache: true
 
+      - name: Set up gotestfmt
+        run: go install github.com/gotesttools/gotestfmt/v2/cmd/gotestfmt@v2.5.0
+
       - name: Download Go modules
         run: go mod download
 
@@ -41,7 +44,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          go test -race -v ./... 2>&1 | tee test.log
+          go test -race -json -v ./... 2>&1 | tee test.log | gotestfmt
 
       - name: Upload test log
         uses: actions/upload-artifact@v4
