--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          go test -race -json -v ./... 2>&1 > test.log
+          go test -race -json -v ./... 2>&1 | tee test.log
 
       - name: Upload test log
         uses: actions/upload-artifact@v4
