Add macOS release builds and remove Windows ARM 32-bit
- Add darwin/amd64 and darwin/arm64 to GoReleaser configuration
- Update Makefile to build both Intel and Apple Silicon binaries
- Remove Windows ARM 32-bit builds (architecture doesn't exist)
- Keep Linux ARM 32-bit for Raspberry Pi and embedded devices

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,6 +30,12 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
+    ignore:
+      - goos: darwin
+        goarch: arm
+      - goos: windows
+        goarch: arm
     ldflags:
       - -s -w
 archives:
