ensure version.go version matches tag version

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,20 @@ jobs:
         with:
           lfs: 'true'
       
+      - name: Verify version.go matches tag
+        run: |
+          TAG_VERSION=${GITHUB_REF#refs/tags/v}
+          CODE_VERSION=$(sed -n 's/.*Version = "\([^"]*\)".*/\1/p' version.go)
+          echo "Tag version: v$TAG_VERSION"
+          echo "Code version: $CODE_VERSION"
+          if [ "$TAG_VERSION" != "$CODE_VERSION" ]; then
+            echo "ERROR: Version mismatch!"
+            echo "  Tag:     v$TAG_VERSION"
+            echo "  version.go: $CODE_VERSION"
+            exit 1
+          fi
+          echo "✓ Versions match: $CODE_VERSION"
+      
       - name: Verify server-sdk-go version
         run: |
           livekit_cli_ver=${GITHUB_REF#refs/tags/}
